[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Tiles/teste_tileset2.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Base/DeathSFX.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/start-assets/new_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/SFX/explodemini.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/arrowHit01.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Levels/TutorialLevel.gd" type="Script" id=6]
[ext_resource path="res://Assets/SFX/Construction.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/DST-TowerDefenseTheme_1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/qubodup-GhostMoan03.wav" type="AudioStream" id=9]
[ext_resource path="res://UI/WinScene0.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/LoseScene0.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Levels/Tutorial.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Base/BuildTowerButton.tscn" type="PackedScene" id=14]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 72.4305, 9.88743, 0, 0, 0, 0, 71.8693, 136.726, 0, 0, 0, 0, 359.781, 137.287, 0, 0, 0, 0, 360.903, 231.574, 0, 0, 0, 0, 522.538, 232.135 )
}

[node name="Game" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 16, 1, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 65536, 18, 0, 65537, 18, 0, 65538, -1073741824, 0, 65539, -1073741824, 0, 65540, 22, 0, 65541, -1073741824, 0, 65542, -1073741824, 0, 65543, 14, 0, 65544, 1, 0, 65545, 33, 0, 65546, 13, 0, 65547, 1, 0, 65548, 18, 0, 65549, 14, 0, 65550, 11, 0, 65551, 14, 0, 65552, 2, 0, 65553, 18, 0, 65554, 18, 0, 65555, 14, 0, 65556, 34, 0, 65557, 18, 0, 65558, 18, 0, 65559, 34, 0, 65560, 18, 0, 65561, 18, 0, 65562, 34, 0, 65563, 14, 0, 65564, 18, 0, 65565, 18, 0, 65566, 33, 0, 65567, 18, 0, 131072, 13, 0, 131073, 23, 0, 131074, -1073741824, 0, 131075, -1073741824, 0, 131076, 22, 0, 131077, -1073741824, 0, 131078, -1073741824, 0, 131079, 6, 0, 131080, 11, 0, 131081, 6, 0, 131082, 23, 0, 131083, 14, 0, 131084, 6, 0, 131085, 16, 0, 131086, 34, 0, 131087, 6, 0, 131088, 18, 0, 131089, 18, 0, 131090, 34, 0, 131091, 33, 0, 131092, 34, 0, 131093, 6, 0, 131094, 34, 0, 131095, 33, 0, 131096, 18, 0, 131097, 18, 0, 131098, 33, 0, 131099, 34, 0, 131100, 34, 0, 131101, 33, 0, 131102, 1, 0, 131103, 18, 0, 196608, 34, 0, 196609, 23, 0, 196610, -1073741824, 0, 196611, -1073741824, 0, 196612, 22, 0, 196613, -1073741824, 0, 196614, -1073741824, 0, 196615, 14, 0, 196616, 14, 0, 196617, 6, 0, 196618, 34, 0, 196619, 13, 0, 196620, 6, 0, 196621, 33, 0, 196622, 34, 0, 196623, 21, 0, 196624, 14, 0, 196625, 18, 0, 196626, 34, 0, 196627, 18, 0, 196628, 18, 0, 196629, 34, 0, 196630, 19, 0, 196631, 33, 0, 196632, 34, 0, 196633, 2, 0, 196634, 33, 0, 196635, 14, 0, 196636, 21, 0, 196637, 34, 0, 196638, 33, 0, 196639, 18, 0, 262144, 14, 0, 262145, 18, 0, 262146, -1073741824, 0, 262147, -1073741824, 0, 262148, 22, 0, 262149, -1073741824, 0, 262150, -1073741824, 0, 262151, 6, 0, 262152, 34, 0, 262153, 33, 0, 262154, 6, 0, 262155, 13, 0, 262156, 21, 0, 262157, 6, 0, 262158, 6, 0, 262159, 6, 0, 262160, 33, 0, 262161, 23, 0, 262162, 33, 0, 262163, 34, 0, 262164, 2, 0, 262165, 21, 0, 262166, 6, 0, 262167, 34, 0, 262168, 18, 0, 262169, 33, 0, 262170, 34, 0, 262171, 14, 0, 262172, 14, 0, 262173, 14, 0, 262174, 13, 0, 262175, 15, 0, 327680, 18, 0, 327681, 18, 0, 327682, -1073741824, 0, 327683, -1073741824, 0, 327684, 22, 0, 327685, -1073741824, 0, 327686, -1073741824, 0, 327687, 14, 0, 327688, 14, 0, 327689, 6, 0, 327690, 34, 0, 327691, 13, 0, 327692, 13, 0, 327693, 6, 0, 327694, 14, 0, 327695, 34, 0, 327696, 14, 0, 327697, 6, 0, 327698, 1, 0, 327699, 34, 0, 327700, 33, 0, 327701, 6, 0, 327702, 34, 0, 327703, 33, 0, 327704, 18, 0, 327705, 18, 0, 327706, 34, 0, 327707, 18, 0, 327708, 33, 0, 327709, 14, 0, 327710, 14, 0, 327711, 15, 0, 393216, 23, 0, 393217, 13, 0, 393218, -1073741824, 0, 393219, -1073741824, 0, 393220, 22, 0, 393221, -1073741824, 0, 393222, -1073741824, 0, 393223, -1073741824, 0, 393224, -1073741824, 0, 393225, -1073741824, 0, 393226, -1073741824, 0, 393227, -1073741824, 0, 393228, -1073741824, 0, 393229, -1073741824, 0, 393230, -1073741824, 0, 393231, -1073741824, 0, 393232, -1073741824, 0, 393233, -1073741824, 0, 393234, -1073741824, 0, 393235, -1073741824, 0, 393236, -1073741824, 0, 393237, -1073741824, 0, 393238, -1073741824, 0, 393239, -1073741824, 0, 393240, -1073741824, 0, 393241, 14, 0, 393242, 18, 0, 393243, 23, 0, 393244, 18, 0, 393245, 19, 0, 393246, 13, 0, 393247, 19, 0, 458752, 34, 0, 458753, 18, 0, 458754, -1073741824, 0, 458755, -1073741824, 0, 458756, 22, 0, 458757, -1073741824, 0, 458758, -1073741824, 0, 458759, -1073741824, 0, 458760, -1073741824, 0, 458761, -1073741824, 0, 458762, -1073741824, 0, 458763, -1073741824, 0, 458764, -1073741824, 0, 458765, -1073741824, 0, 458766, -1073741824, 0, 458767, -1073741824, 0, 458768, -1073741824, 0, 458769, -1073741824, 0, 458770, -1073741824, 0, 458771, -1073741824, 0, 458772, -1073741824, 0, 458773, -1073741824, 0, 458774, -1073741824, 0, 458775, -1073741824, 0, 458776, -1073741824, 0, 458777, 34, 0, 458778, 33, 0, 458779, 18, 0, 458780, 13, 0, 458781, 13, 0, 458782, 34, 0, 458783, 15, 0, 524288, 19, 0, 524289, 13, 0, 524290, -1073741824, 0, 524291, -1073741824, 0, 524292, -1073741797, 0, 524293, -1073741802, 0, 524294, -1073741802, 0, 524295, -1073741802, 0, 524296, -1073741802, 0, 524297, -1073741802, 0, 524298, -1073741802, 0, 524299, -1073741802, 0, 524300, -1073741802, 0, 524301, -1073741802, 0, 524302, -1073741802, 0, 524303, -1073741802, 0, 524304, -1073741802, 0, 524305, -1073741802, 0, 524306, -1073741802, 0, 524307, -1073741802, 0, 524308, -1073741802, 0, 524309, -1073741802, 0, 524310, -1610612709, 0, 524311, -1073741824, 0, 524312, -1073741824, 0, 524313, 18, 0, 524314, 18, 0, 524315, 34, 0, 524316, 21, 0, 524317, 34, 0, 524318, 13, 0, 524319, 15, 0, 589824, 14, 0, 589825, 21, 0, 589826, -1073741824, 0, 589827, -1073741824, 0, 589828, -1073741824, 0, 589829, -1073741824, 0, 589830, -1073741824, 0, 589831, -1073741824, 0, 589832, -1073741824, 0, 589833, -1073741824, 0, 589834, -1073741824, 0, 589835, -1073741824, 0, 589836, -1073741824, 0, 589837, -1073741824, 0, 589838, -1073741824, 0, 589839, -1073741824, 0, 589840, -1073741824, 0, 589841, -1073741824, 0, 589842, -1073741824, 0, 589843, -1073741824, 0, 589844, -1073741824, 0, 589845, -1073741824, 0, 589846, 1610612758, 0, 589847, -1073741824, 0, 589848, -1073741824, 0, 589849, 33, 0, 589850, 18, 0, 589851, 23, 0, 589852, 33, 0, 589853, 34, 0, 589854, 13, 0, 589855, 34, 0, 655360, 19, 0, 655361, 18, 0, 655362, -1073741824, 0, 655363, -1073741824, 0, 655364, -1073741824, 0, 655365, -1073741824, 0, 655366, -1073741824, 0, 655367, -1073741824, 0, 655368, -1073741824, 0, 655369, -1073741824, 0, 655370, -1073741824, 0, 655371, -1073741824, 0, 655372, -1073741824, 0, 655373, -1073741824, 0, 655374, -1073741824, 0, 655375, -1073741824, 0, 655376, -1073741824, 0, 655377, -1073741824, 0, 655378, -1073741824, 0, 655379, -1073741824, 0, 655380, -1073741824, 0, 655381, -1073741824, 0, 655382, 22, 0, 655383, -1073741824, 0, 655384, -1073741824, 0, 655385, 2, 0, 655386, 18, 0, 655387, 13, 0, 655388, 14, 0, 655389, 13, 0, 655390, 19, 0, 655391, 15, 0, 720896, 34, 0, 720897, 14, 0, 720898, 23, 0, 720899, 14, 0, 720900, 17, 0, 720901, 13, 0, 720902, 17, 0, 720903, 17, 0, 720904, 14, 0, 720905, 14, 0, 720906, 14, 0, 720907, 13, 0, 720908, 34, 0, 720909, 13, 0, 720910, 14, 0, 720911, 13, 0, 720912, 13, 0, 720913, 14, 0, 720914, 16, 0, 720915, 16, 0, 720916, -1073741824, 0, 720917, -1073741824, 0, 720918, 1610612758, 0, 720919, -1073741824, 0, 720920, -1073741824, 0, 720921, 18, 0, 720922, 18, 0, 720923, 14, 0, 720924, 18, 0, 720925, 13, 0, 720926, 18, 0, 720927, 19, 0, 786432, 14, 0, 786433, 6, 0, 786434, 6, 0, 786435, 6, 0, 786436, 13, 0, 786437, 14, 0, 786438, 14, 0, 786439, 14, 0, 786440, 17, 0, 786441, 17, 0, 786442, 13, 0, 786443, 17, 0, 786444, 17, 0, 786445, 17, 0, 786446, 17, 0, 786447, 16, 0, 786448, 13, 0, 786449, 16, 0, 786450, 33, 0, 786451, 2, 0, 786452, -1073741824, 0, 786453, -1073741824, 0, 786454, 22, 0, 786455, 0, 0, 786456, 0, 0, 786457, -1073741824, 0, 786458, -1073741824, 0, 786459, -1073741824, 0, 786460, -1073741824, 0, 786461, -1073741824, 0, 786462, -1073741824, 0, 786463, -1073741824, 0, 851968, 14, 0, 851969, 14, 0, 851970, 14, 0, 851971, 34, 0, 851972, 34, 0, 851973, 6, 0, 851974, 6, 0, 851975, 6, 0, 851976, 34, 0, 851977, 33, 0, 851978, 21, 0, 851979, 34, 0, 851980, 18, 0, 851981, 16, 0, 851982, 18, 0, 851983, 18, 0, 851984, 16, 0, 851985, 6, 0, 851986, 16, 0, 851987, 21, 0, 851988, 0, 0, 851989, 0, 0, 851990, 1610612758, 0, 851991, -1073741824, 0, 851992, -1073741824, 0, 851993, -1073741824, 0, 851994, -1073741824, 0, 851995, -1073741824, 0, 851996, -1073741824, 0, 851997, -1073741824, 0, 851998, -1073741824, 0, 851999, -1073741824, 0, 917504, 21, 0, 917505, 18, 0, 917506, 33, 0, 917507, 13, 0, 917508, 33, 0, 917509, 21, 0, 917510, 18, 0, 917511, 34, 0, 917512, 16, 0, 917513, 34, 0, 917514, 33, 0, 917515, 33, 0, 917516, 34, 0, 917517, 18, 0, 917518, 21, 0, 917519, 34, 0, 917520, 16, 0, 917521, 18, 0, 917522, 16, 0, 917523, 16, 0, 917524, -1073741824, 0, 917525, -1073741824, 0, 917526, -1073741797, 0, 917527, -1073741802, 0, 917528, -1073741802, 0, 917529, -1073741802, 0, 917530, -1073741802, 0, 917531, -1073741802, 0, 917532, -1073741802, 0, 917533, -1073741802, 0, 917534, -1073741802, 0, 917535, -1073741802, 0, 983040, 34, 0, 983041, 16, 0, 983042, 33, 0, 983043, 33, 0, 983044, 33, 0, 983045, 20, 0, 983046, 20, 0, 983047, 33, 0, 983048, 19, 0, 983049, 34, 0, 983050, 19, 0, 983051, 16, 0, 983052, 18, 0, 983053, 34, 0, 983054, 16, 0, 983055, 2, 0, 983056, 21, 0, 983057, 18, 0, 983058, 16, 0, 983059, 16, 0, 983060, -1073741824, 0, 983061, -1073741824, 0, 983062, -1073741824, 0, 983063, -1073741824, 0, 983064, -1073741824, 0, 983065, -1073741824, 0, 983066, -1073741824, 0, 983067, -1073741824, 0, 983068, -1073741824, 0, 983069, -1073741824, 0, 983070, -1073741824, 0, 983071, -1073741824, 0, 1048576, 18, 0, 1048577, 19, 0, 1048578, 18, 0, 1048579, 33, 0, 1048580, 13, 0, 1048581, 20, 0, 1048582, 33, 0, 1048583, 18, 0, 1048584, 34, 0, 1048585, 16, 0, 1048586, 21, 0, 1048587, 34, 0, 1048588, 34, 0, 1048589, 18, 0, 1048590, 18, 0, 1048591, 33, 0, 1048592, 16, 0, 1048593, 33, 0, 1048594, 6, 0, 1048595, 6, 0, 1048596, 34, 0, 1048597, 34, 0, 1048598, 34, 0, 1048599, 34, 0, 1048600, 6, 0, 1048601, 6, 0, 1048602, 34, 0, 1048603, 34, 0, 1048604, 33, 0, 1048605, 34, 0, 1048606, 33, 0, 1048607, 15, 0, 1114112, 19, 0, 1114113, 14, 0, 1114114, 14, 0, 1114115, 20, 0, 1114116, 33, 0, 1114117, 13, 0, 1114118, 34, 0, 1114119, 19, 0, 1114120, 34, 0, 1114121, 18, 0, 1114122, 16, 0, 1114123, 2, 0, 1114124, 33, 0, 1114125, 16, 0, 1114126, 33, 0, 1114127, 16, 0, 1114128, 23, 0, 1114129, 16, 0, 1114130, 6, 0, 1114131, 34, 0, 1114132, 19, 0, 1114133, 23, 0, 1114134, 33, 0, 1114135, 23, 0, 1114136, 33, 0, 1114137, 23, 0, 1114138, 33, 0, 1114139, 34, 0, 1114140, 33, 0, 1114141, 34, 0, 1114142, 23, 0, 1114143, 15, 0, 1179648, 19, 0, 1179649, 20, 0, 1179650, 19, 0, 1179651, 14, 0, 1179652, 14, 0, 1179653, 19, 0, 1179654, 14, 0, 1179655, 19, 0, 1179656, 14, 0, 1179657, 21, 0, 1179658, 14, 0, 1179659, 19, 0, 1179660, 14, 0, 1179661, 21, 0, 1179662, 14, 0, 1179663, 16, 0, 1179664, 21, 0, 1179665, 16, 0, 1179666, 16, 0, 1179667, 16, 0, 1179668, 21, 0, 1179669, 16, 0, 1179670, 16, 0, 1179671, 19, 0, 1179672, 16, 0, 1179673, 16, 0, 1179674, 16, 0, 1179675, 16, 0, 1179676, 23, 0, 1179677, 16, 0, 1179678, 16, 0, 1179679, 19, 0 )

[node name="Caminho" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobTimer" type="Timer" parent="."]

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2.0
margin_top = -3.0
margin_right = 516.0
margin_bottom = 17.0
theme = ExtResource( 3 )
color = Color( 0.0431373, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="."]
margin_top = -2.24492
margin_right = 40.0
margin_bottom = 18.7551
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesLabel" type="Label" parent="."]
margin_left = 113.93
margin_top = -1.6837
margin_right = 153.93
margin_bottom = 19.3163
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveLabel" type="Label" parent="."]
margin_left = 223.37
margin_top = -1.12246
margin_right = 263.37
margin_bottom = 19.8775
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="."]
margin_left = 356.943
margin_top = -1.12247
margin_right = 422.943
margin_bottom = 19.8775
theme = ExtResource( 3 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -3.0

[node name="MusicLevel" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true

[node name="DeathSFX" parent="." instance=ExtResource( 2 )]

[node name="ConstructSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="ArrowSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="BombSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Pause" type="Button" parent="."]
margin_left = 464.138
margin_top = -2.24492
margin_right = 528.138
margin_bottom = 24.7551
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 3 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="BuildTowerButton" parent="." instance=ExtResource( 14 )]
margin_left = 204.5
margin_top = 114.5
margin_right = 220.5
margin_bottom = 130.5

[node name="Tutorial" type="ColorRect" parent="."]
pause_mode = 2
visible = false
margin_left = -3.0
margin_top = 144.0
margin_right = 515.0
margin_bottom = 289.0
theme = ExtResource( 3 )
color = Color( 0.929412, 0.0745098, 0.0745098, 1 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial1" type="Label" parent="Tutorial"]
margin_left = 10.4539
margin_top = 4.92398
margin_right = 455.454
margin_bottom = 121.924
text = "Oh a phantom! 
You need to protect yourself!
If the phatom reach the end your lives will decrease
If lives = 0, you will die!
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial2" type="Label" parent="Tutorial"]
visible = false
margin_left = 10.0
margin_top = 5.0
margin_right = 496.0
margin_bottom = 133.0
text = "To kill the phantom you will need to create a tower!
Click in the button  to create a tower
You can destroy it or
upgrade your tower,if the tower kill 5 phantoms or more
if you click it"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Tutorial"]
margin_left = 206.067
margin_top = 114.43
margin_right = 296.067
margin_bottom = 141.43
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue2" type="Button" parent="Tutorial"]
visible = false
margin_left = 205.997
margin_top = 113.708
margin_right = 295.997
margin_bottom = 140.708
text = "Continue"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WinScene" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false
margin_left = 3.08209
margin_top = -4.37051
margin_right = 3.08203
margin_bottom = -4.37048
rect_scale = Vector2( 1.02, 1.02 )

[node name="LoseScene" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false
margin_left = 2.0
margin_top = -2.0
margin_right = 12.0
margin_bottom = 11.0
rect_scale = Vector2( 1.02, 1.02 )

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
margin_left = -7.0
margin_top = -9.0
margin_right = 1033.0
margin_bottom = 612.0
color = Color( 0.0901961, 0.192157, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu"]
margin_left = 351.331
margin_top = 44.8985
margin_right = 403.331
margin_bottom = 65.8985
rect_scale = Vector2( 6, 6 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
margin_left = 322.147
margin_top = 194.186
margin_right = 362.147
margin_bottom = 234.186
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_right = 90.0
margin_bottom = 27.0
text = "Continue"

[node name="Retry" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 31.0
margin_right = 90.0
margin_bottom = 58.0
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
margin_top = 62.0
margin_right = 90.0
margin_bottom = 89.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="button_down" from="Pause" to="." method="_on_Pause_button_down"]
[connection signal="timeout" from="TutorialTimer" to="." method="_on_TutorialTimer_timeout"]
[connection signal="button_down" from="Tutorial/Continue" to="Tutorial" method="_on_Continue_button_down"]
[connection signal="button_down" from="Tutorial/Continue2" to="Tutorial" method="_on_Continue2_button_down"]
[connection signal="button_down" from="CanvasLayer/PauseMenu/VBoxContainer/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="CanvasLayer/PauseMenu/VBoxContainer/Retry" to="." method="_on_Retry_button_down"]
[connection signal="button_down" from="CanvasLayer/PauseMenu/VBoxContainer/Quit" to="." method="_on_Quit_button_down"]
